--- a/api/templates/tamagosaurus/new.html.twig
+++ b/api/templates/tamagosaurus/new.html.twig
@@ -4,7 +4,14 @@
 {% endblock %}
 
 {% block body %}
+
 	<main>
+		{{ parent()}}
+		<style>
+			body {
+				background-image: url({{ asset("build/images/backgrounds/background-blue-one.png") }});
+			}
+		</style>
 		<div class="card col-md-10 mx-auto">
 			<div class="card-header bg-primary">
 				<h1 class="text-white">Tamagosaurus</h1>
