setting up tamagosaurus needs

--- a/api/templates/tamagosaurus/index.html.twig
+++ b/api/templates/tamagosaurus/index.html.twig
@@ -29,6 +29,8 @@
             data-tamagosaurus-id="{{tamagosauru.id}}"
         >
             {{ tamagosauru.name }}
+
+            {{ dump(first.type.foodInterval) }}
         </div>
 
         {% include 'tamagosaurus/_dino.html.twig' %}        
