--- a/api/templates/tamagosaurus/_dino.html.twig
+++ b/api/templates/tamagosaurus/_dino.html.twig
@@ -1,5 +1,7 @@
-<div id="dino-render"></div>
-
-<div class="bg-white p-4 custom-padding neon-effect pt-5">
-	<img class="rounded mx-auto d-block" style="width: 30%;" src="{{ asset( tamagosauru.image ) }}" alt="Un mignon Tamagosaurus !"><br>
-</div>
+{% if tamagosauru.type.name == '3DSaurus' %}
+	<div id="dino-render"></div>
+{% else %}
+	<div class="bg-white p-4 custom-padding neon-effect pt-5">
+		<img class="rounded mx-auto d-block" style="width: 30%;" src="{{ asset( tamagosauru.image ) }}" alt="Un mignon Tamagosaurus !"><br>
+	</div>
+{% endif %}
