--- a/api/templates/tamagosaurus/new.html.twig
+++ b/api/templates/tamagosaurus/new.html.twig
@@ -13,9 +13,9 @@
 			<div class="card-body">
 				<img src="{{ asset('/build/images/eggs/dinoegg.png') }}">
 				=>
-				<img style="width: 20%;" src="{{ asset('/build/images/dinosaures/diplosaure-aquaticus.png') }}">
+				<img style="width: 20%;" src="{{ asset( species.image ) }}">
 
-				<p>Bonjour !<br>Je suis un brachiosaurus, je suis content d'avoir été choisi, il commençait à faire chaud dans cet oeuf !</p>
+				<p>Bonjour !<br>Je suis un {{species.name}}, je suis content d'avoir été choisi, il commençait à faire chaud dans cet oeuf !</p>
 				<h3>Comment veux-tu m'appeler ?</h3>
 
 				{{ include('tamagosaurus/_form.html.twig') }}
