--- a/api/templates/tamagosaurus/_dino.html.twig
+++ b/api/templates/tamagosaurus/_dino.html.twig
@@ -1,7 +1,11 @@
 {% if tamagosauru.type.name == '3DSaurus' %}
 	<div id="dino-render"></div>
 {% else %}
-	<div class="bg-white p-4 custom-padding neon-effect pt-5">
+	<div class="p-4 custom-padding neon-effect pt-5"
+	{% if destination is not defined %}
+	style="background-image: url( {{ asset( tamagosauru.type.environment.image ) }})"
+	{% endif %}
+	>
 		<img class="rounded mx-auto d-block" style="width: 30%;" src="{{ asset( tamagosauru.image ) }}" alt="Un mignon Tamagosaurus !"><br>
 	</div>
 {% endif %}
