--- a/api/templates/home/eggChoice.html.twig
+++ b/api/templates/home/eggChoice.html.twig
@@ -13,9 +13,8 @@
 					background-image: url({{ asset("build/images/backgrounds/background-blue-one.png") }});
 				}
 			</style>
-			<div class="card-header bg-primary">
-				<h1>Tamagosaurus</h1>
-				<h2>Quel oeuf choisirez-vous ?</h2>
+			<div class="card-header bg-primary text-white">
+				<h2>Choisis ton oeuf !</h2>
 			</div>
 
 			<div class="card-body">
