--- a/api/templates/base.html.twig
+++ b/api/templates/base.html.twig
@@ -17,6 +17,11 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <style>
+                body {
+                    background-image: url({{ asset("build/images/backgrounds/background-blue-one.png") }});
+                }
+            </style>
         {% endblock %}
 
         {% block javascripts %}
