3d dino functional, various fixes

--- a/api/templates/home/eggChoice.html.twig
+++ b/api/templates/home/eggChoice.html.twig
@@ -20,8 +20,8 @@
 			<div class="card-body">
 				<h3>Un oeuf, un tamagosaure !</h3>
 				<p>
-					Parmi l'un de ces oeufs se trouve votre bébé Tamagosaure.
-					Cliquez sur l'un d'entre eux pour choisir votre premier Tamagosaure !
+					Parmi l'un de ces oeufs se trouve ton bébé Tamagosaure.
+					Clique sur l'un d'entre eux pour choisir ton premier Tamagosaure !
 				</p>
 
             <div class="col-md-12 text-center">
