--- a/api/templates/tamagosaurus/_dino.html.twig
+++ b/api/templates/tamagosaurus/_dino.html.twig
@@ -1,5 +1,5 @@
 {% if tamagosauru.type.name == '3DSaurus' %}
-	<div id="dino-render"></div>
+	<div id="dino-render" style="width:30%"></div>
 {% else %}
 	{% if destination is not defined %}
 	<div class="p-4 custom-padding neon-effect pt-5"
