--- a/api/templates/tamagosaurus/index.html.twig
+++ b/api/templates/tamagosaurus/index.html.twig
@@ -34,6 +34,15 @@
 
         <p class="text-success">Faim : <span id="dino-hunger"></span></p>
 
+        <!-- Div For Progress Bar -->
+	<div class="progress">
+		<div class="progress-bar progress-bar-striped" role="progressbar"  style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="progressbar" >0%</div>
+	</div>
+	
+	<p id="value"> </p>
+	<!-- End of Container -->
+	</div>
+
         <div id="options-submenu" class="element-visible text-center mb-2"> <!-- JS replaces visible with hidden, but there's no visible -->
             <button class="btn btn-primary btn-lg element-hidden">Fake</button>
         </div>
