logo WCS + disable web profiler

--- a/api/templates/base.html.twig
+++ b/api/templates/base.html.twig
@@ -45,7 +45,7 @@
             {% endblock %}
         </main>
 
-        <footer>
+        <footer class=" text-center text-white">
             {% block footer %}
                 {% include 'layout/_footer.html.twig' %}
             {% endblock %}
