--- a/api/templates/layout/_footer.html.twig
+++ b/api/templates/layout/_footer.html.twig
@@ -1,8 +1,5 @@
-<footer class="text-center text-white">
-  <!-- Copyright -->
-  <div class="text-center p-5">
-    © 2023 Copyright - 
-    <a class="text-white" href="https://mdbootstrap.com/">Tamagosaurus.com</a>
-  </div>
-  <!-- Copyright -->
-</footer>
+<div class="text-center p-1">
+  <img src="{{ asset('build/images/logos/WCS.png') }}" title="Wild Code School" style="width: 100px;">
+  <br>
+  © 2023 Copyright - <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap</a>
+</div>
