--- a/api/templates/tamagosaurus/index.html.twig
+++ b/api/templates/tamagosaurus/index.html.twig
@@ -52,7 +52,7 @@
         </div>
 
         <div id="options-clothes" class="text-center d-none mb-2">
-            <button class="btn btn-primary btn-lg rounded-pill">test</button>
+            <button class="btn btn-primary btn-lg rounded-pill">En développement</button>
         </div>
 
         <div id="options-locations" class="text-center d-none mb-2">
