--- a/api/templates/login/index.html.twig
+++ b/api/templates/login/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoginController!
+{% block title %}Connexion — {{parent()}}
 {% endblock %}
 
 {% block body %}
