--- a/api/templates/registration/register.html.twig
+++ b/api/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register
+{% block title %}Inscription — {{ parent() }}
 {% endblock %}
 
 {% block body %}
